@@ -25,6 +25,7 @@ namespace config
 		std::string server, //server address (e.g. 127.0.0.1)
 			defaultPlayerAI, defaultBattleAI; //dll names
 		bool showFPS; //show/hide FPS counter
+		bool classicCreatureWindow;
 	};
 	
 	struct ButtonInfo
